# one-click-launch

./: README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json
data/: one_click_launch.db
src/: App.vue  App2.vue  DragDropResource.vue  demo.vue  home.vue  launcher copy.vue  launcher.vue  launcherLite.vue  main.ts  settings.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: user.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: extract_icon.ps1
src-tauri/src/: constants.rs  error.rs  events.rs  launcher.rs  launcher_service.rs  lib.rs  main.rs  resource.rs  shell_execute_resource.rs  utils.rs  web.rs
src-tauri/src/api/: launcher_api.rs  mod.rs  setting_api.rs  window_api.rs
src-tauri/src/db/: launcher.rs  launcher_resource.rs  mod.rs  settings.rs
src-tauri/src/events/: payloads.rs  system_listeners.rs  types.rs
src-tauri/src/program_link/: link.rs  mod.rs
src-tauri/src/resource/: application.rs  file.rs  mod.rs  shortcut.rs  web_page.rs
src-tauri/src/resource_provider/: mod.rs
